2002-11-27  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/atom.cpp(MemberOfRingSize): New method -- if atom is in a
	ring, return size. (Need to fix to designate *which* ring if in
	multiple.)
	(SetHybAndGeom): Fix to use scaled bondlengths for aromatic,
	double and triple bonds and adjust expected bond angles if in a
	ring.

	* src/mol.cpp: Add << and >> convenience functions based on
	OBFileFormat objects.

	* src/ghemical.cpp: Fix header line for new "gpr" extension.

	* src/povray.cpp: New file, contributed by Steffen Reith to output
	POV-Ray scene files.
	
	* src/data.cpp, src/data.h: Add POV file type.

	* src/extable.txt, src/extable.h: Likewise.

	* src/fileformat.cpp, src/fileformat.h: Likewise:

	* src/Makefile.in: Add povray.cpp.

	* doc/README.dioxin.pov, doc/README.povray, doc/babel31.inc,
	doc/dioxin.mol2, doc/dioxin.pov: New files.

2002-11-25  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* src/mol.cpp, src/mol.h: Add back << and >> convenience functions
	derived from OBFileFormat methods.
	(PerceiveBondOrders): Fix bug introduced with previous change--do
	not add multiple bonds to an atom already with them. (Causes a
	problem with allene, but this is a rarer situation than the
	reverse.)

	* src/pdb.cpp (WritePDB, WriteDelphiPDB): Fix ATOM records with
	correct specification. Should fix problems with 5-digit atom
	numbers, PR#633719, reported by Kristian Rother.
	
2002-11-20  Geoff Hutchison  <hutchisn@chem.northwestern.edu>

	* configure: Update with new autoconf-2.56

	* src/Makefile.in, src/math/Makefile.in, test/Makefile.in: Remove
	redundant '/' in path for $(builddir) variable.

	* src/data.cpp: Remove references to depreciated strstream.h
	header.

	* src/data.h: Likewise.

	* src/mol.cpp: Add "flat ring" pass for 5-member and 6-member
	rings. Ensures that these are all marked as potential sp2
	hybrids. Also prevent adding 4 bonds to nitrogen, for now.

	* src/extable.txt, src/extable.h: Update with new Ghemical